attempt 2 at fixing blue screen at the top of my website on mobile device

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -103,7 +103,7 @@ img {
 #hamburger-menu-page {
   position: fixed;
   top: -150%;
-  height: 100vh;
+  height: 100%;
   left: 0;
   right: 0;
   background-color: var(--blue-color);
